--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ a{
     padding: 0 10px;
     display: flex;
     justify-content: space-between;
-    align-items:center
+    align-items: center;
 }
 
 .footer-div{
